# seriacade

./: LICENSE  README.md  pyproject.toml
src/seriacade/: __init__.py
src/seriacade/implementations/: __init__.py  builtin.py  errors.py  pydantic.py
src/seriacade/json/: __init__.py  interfaces.py  types.py
tests/unit/implementations/: test_builtin.py  test_pydantic.py
