[project]
name = "seriacade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tyler Allen", email = "tallen12@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "basedpyright>=1.36.1",
    "ruff>=0.14.9",
]

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "hypothesis>=6.148.7",
    "hypothesis-jsonschema>=0.23.1",
    "poethepoet>=0.38.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]


# Setup some POE tasks
[tool.poe.tasks]
unit_tests = "pytest tests/unit"
lint = "ruff check"
format = "ruff format"
typecheck = "basedpyright check"

[tool.ruff]
line-length = 120 # Set your desired line length here

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint]
select = ["ALL", "D"]
ignore = [
    # Recommended disabled Rules https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC002",
    # Generic parameters
    "UP046",
    # Docstring related
    "D100",
    "D102",
    "D104",
    "D105",
    "D107"
]

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"
